--- a/src/tree/index.css
+++ b/src/tree/index.css
@@ -3,9 +3,10 @@
   height: 100%;
   padding: 10px;
   font-family: monospace;
+  counter-reset: counter-level0 counter-level1 counter-level2 counter-level3;
 }
 
-.level1::before {
+/* .level1::before {
   content: '\00a0\00a0\00a0\00a0';
 }
 
@@ -15,4 +16,31 @@
 
 .level3::before {
   content: '\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0';
+} */
+
+.level0::before {
+  counter-increment: counter-level0;
+  content: counter(counter-level0) '\00a0';
+}
+
+.level1::before {
+  counter-increment: counter-level1;
+  content: '\00a0\00a0\00a0\00a0'counter(counter-level0) '.' counter(
+      counter-level1
+    ) '\00a0';
+}
+
+.level2::before {
+  counter-increment: counter-level2;
+  content: '\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0'counter(counter-level0) '.'
+    counter(counter-level1) '.' counter(counter-level2) '\00a0';
+}
+
+.level3::before {
+  counter-increment: counter-level3;
+  content: '\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0'counter(
+      counter-level0
+    ) '.' counter(counter-level1) '.' counter(counter-level2) '.' counter(
+      counter-level3
+    ) '\00a0';
 }
